2017-08-12  Allen D. Ball  <ball@sol>

	* src/main/java/ball/http/ProtocolResponseHandler.java:
	Handle complex protocol method return types.

2017-08-01  Allen D. Ball  <ball@sol>

	* Re-factored ProtocolClientBuilder into ProtocolClient,
	ProtocolInvocationHandler, ProtocolRequestBuilder, and
	ProtocolResponseHandler.

2017-07-29  Allen D. Ball  <ball@sol>

	* src/main/java/ball/http/URIBuilderFactory.java:
	Moved URIBuilderFactory to ball.http package.

2017-07-27  Allen D. Ball  <ball@sol>

	* src/main/java/ball/http/ProtocolInvocationHandler.java:
	Use a ResponseHandler to convert HttpResponse to protocol method
	return type.

2017-07-25  Allen D. Ball  <ball@sol>

	* Added support for @HostParameter.  Added type() member to
	protocol method annotations to specify the respective
	implementations.

2017-07-24  Allen D. Ball  <ball@sol>

	* src/main/java/ball/http/ProtocolClientBuilder.java,
	src/main/java/ball/http/ProtocolInvocationHandler.java
	(and associated Annotations and Processors):
	Initial writing.

	* src/main/java/ball/http/client/method/URIBuilderFactory.java:
	Added getInstance(URI) and getInstance(String) methods.

2017-07-23  Allen D. Ball  <ball@sol>

	* src/main/java/ball/http/annotation/URISpecification.java,
	processing/URISpecificationProcessor.java:
	Support annotating interfaces and interface methods.

	* src/main/java/ball/http/client/method/URIBuilderFactory.java:
	Added getInstance(URISpecification) method.

2017-03-05  Allen D. Ball  <ball@sol.local>

	* Added support for <http-head/>, <http-options/>, and
	<http-patch> Ant Tasks and targets.

2017-01-28  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/ant/taskdefs/HTTPTask.java:
	Support "buffer" attribute.  Set Task attributes from Project
	Properties in init().

	* build.xml: Added "http-delete" and "http-put" targets.

2016-09-17  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/ant/taskdefs/HTTPTask.java:
	Removed context() method.
